tests/paczka1/small_fuzzy/93445349.err
Error in line 3: 6KbDGwVG S5*1 32,4
Error in line 1: 6KbDGwVG S591 81,1
Error in line 4: LI4h S591 43,2
